Actions
Bug #10762
closedhidparser: NULL pointer errors
Start date:
2019-04-13
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/io/usb/clients/hidparser/hidparser.c: In function 'hidparser_get_main_item_data_descr_main': ../../common/io/usb/clients/hidparser/hidparser.c:734:27: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast] *main_item_descr_value = (uint_t)NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 239936d2b877f13d716270a06e56203231806b36
commit 239936d2b877f13d716270a06e56203231806b36 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-23T20:03:50.000Z 10762 hidparser: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions